# torchrunx

./: .gitignore  .pdm-python  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  acc.py  conda-lock.yml  distributed_utils.py  dsp_config.json  environment.yml  log_0  log_0.txt  log_1.txt  pixi.toml  pyproject.toml  pyrightconfig.json  ruff.toml  test_slurm.py  tox.ini
.github/: dependabot.yml  release.yml
.github/actions/setup-dev-env/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: docs-preview.yml  docs.yml  main.yml  publish_docs.yml  push-main.yml  release.yml  release_to_pypi.yml  setup-dev-env.yml
docs/: .readthedocs.yaml  conf.py  index.md  linkcode_github.py  readthedocs.yaml  requirements.txt
docs/source/: advanced.md  advanced.rst  api.md  api.rst  conf.py  contributing.md  contributing.rst  examples.md  features.md  how_it_works.md  how_it_works.rst  index.md  index.rst  launcher.md  launcher.rst  utils.rst
docs/source/artifacts/: accelerate_help.txt  argparse_cli_help.txt  cli_help.txt  deepspeed_help.txt  lightning_help.txt  torchrunx.excalidraw  transformers_help.txt  tyro_cli_help.txt
docs/source/examples/: accelerate.md  composer.md  deepspeed.md  lightning.md  lightning_example.py  transformers.md  transformers_example.py
docs/source/examples/artifacts/: deepspeed_help.txt
docs/source/examples/scripts/: accelerate_example.py  accelerate_help.txt  accelerate_train.py  deepspeed_config.json  deepspeed_help.txt  deepspeed_train.py  generate_help_menus.sh  lightning_help.txt  lightning_train.py  torchrunx_accelerate.py  torchrunx_transformers.py  transformers_help.txt  transformers_train.py
docs/source/features/: cli.md  customization.md  general.md  logging.md  slurm.md  workflows.md
docs/source/old/: launcher.rst
docs/source/usage/: cli.md  general.md  logging.md  slurm.md
examples/: distributed_train.py  slurm_poc.py  submitit_train.py
scripts/: build_docs.sh  generate_help_menus.sh
scripts/examples/: accelerate_train.py  deepspeed_train.py  lightning_train.py  transformers_train.py
slurm_tests/: test_dist.sh  test_main.sh  test_multinode_spawn.sh
slurm_tests/outputs/: test_dist.out  test_dist_slurm.out  test_main.out  test_multinode_spawn.out
src/: __main__.py  networking.py  spawn.py  trconfig.py  trfuncs.py
src/torchrunx/: __init__.py  __main__.py  agent.py  entry.py  environment.py  errors.py  launcher.py  log_utils.py  logging_utils.py  slurm.py  spawn.py  utils.py  worker.py
src/torchrunx/ext/: __init__.py  lightning.py
src/torchrunx/integrations/: __init__.py  cli.py  lightning.py
src/torchrunx/utils/: __init__.py  comm.py  environment.py  errors.py  log_handling.py  log_streaming.py  logging.py  logs.py
tests/: pytest.ini  test_CI.py  test_ci.py  test_dist.py  test_func.py  test_main.py  test_multinode_spawn.py  test_submitit.py  test_train.py  test_train_gpu.py
