[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchrunx"
version = "0.2.4"
authors = [
  { name = "Apoorv Khandelwal", email = "mail@apoorvkh.com" },
  { name = "Peter Curtin", email = "peter_curtin@brown.edu" },
]
description = "Automatically initialize distributed PyTorch environments"
readme = "README.md"
urls = { Repository = "https://github.com/apoorvkh/torchrunx.git", Documentation = "https://torchrunx.readthedocs.io" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
  "cloudpickle>=3.0",
  "fabric>=3.2",
  "torch>=2.0",
  # torch.distributed depends on numpy
  "numpy>=1.20",
]
[dependency-groups]
dev = ["ruff", "pyright", "pytest", "build", "twine"]
dev-extras = ["submitit", "transformers"]

[tool.uv]
managed = true
python-preference = "only-managed"

## Development tools

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = ["docs"]
line-length = 100
src = ["src", "tests"]
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",
  "ANN102",
  "ANN401",  # self / cls / Any annotations
  "BLE001",  # blind exceptions
  "TD",      # todo syntax
  "FIX002",  # existing todos
  "PLR0913", # too many arguments
  "DTZ005",  # datetime timezone
  "S301",    # bandit: pickle
  "S603",
  "S607",    # bandit: subprocess
  "COM812",
  "ISC001",  # conflict with formatter
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D",
  "S101", # allow asserts
  "T201", # allow prints
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.9"
pythonPlatform = "Linux"
